# agent_template

./: .env.dist  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 4c750f1a48e6_create_threads_table.py
app/: __init__.py  container.py
app/agent/: config.py  factory.py  interfaces.py  prompt.py  prompt_resolver.py
app/agent/langgraph/: base_state.py  graph.py  langgraph_agent_instance.py
app/agent/langgraph/checkpoint/: __init__.py  memory.py  postgres.py  resolver.py
app/agent/langgraph/demo/: __init__.py  demo_agent.py
app/agent/langgraph/demo/tools/: tools.py  weather_tool.py
app/agent/models/: ai_message.py  custom_ui_message.py  human_message.py  token.py  tool_result.py
app/agent/services/: agent_service.py  stream_processor.py
app/bootstrap/: __init__.py  agent_registry.py  app_factory.py  config.py
app/http/controllers/: thread_controller.py
app/http/middleware/: __init__.py  auth.py
app/http/routes/: runs_routes.py  thread_routes.py
app/infrastructure/database/: __init__.py  postgresql_connection.py  session.py  sqlmodel_manager.py
app/models/: thread.py
app/repositories/: thread_repository.py  user_repository.py
app/services/: thread_service.py  user_service.py
frontend/src/: styles.css
frontend/src/components/: ChatApp.jsx  Message.jsx  MessageActions.jsx  ThinkingMessage.jsx  ThreadList.jsx  index.js
frontend/src/hooks/: useSSE.js
frontend/src/store/: chatStore.js
tests/agent/services/: test_agent_service.py  test_stream_processor.py
